--- a/views/visit.erb
+++ b/views/visit.erb
@@ -20,9 +20,9 @@
   <div class="form-group">
     <label>Выберите парикмахера</label>
     <select name="hairdresser">
-      <option value="Walter White">Walter White</option>
-      <option value="Jessie Pinkman">Jessie Pinkman</option>
-      <option value="Gus Fring">Gus Fring</option>
+      <option <%= @barber == 'Walter White'? 'selected' : '' %>>Walter White</option>
+      <option <%= @barber == 'Jessie Pinkman'? 'selected' : '' %>>Jessie Pinkman</option>
+      <option <%= @barber == 'Gus Fring'? 'selected' : '' %>>Gus Fring</option>
     </select>
   </div>
   <div>
