--- a/views/visit.erb
+++ b/views/visit.erb
@@ -14,7 +14,7 @@
 
   <div class="form-group">
     <label>Дата и время записи</label>
-    <input name="datetime" type="text" class="form-control"  placeholder="Введите дату и время" value=<%@date_time%>>
+    <input id="datetimepicker" name="datetime" type="text" class="form-control"  placeholder="Введите дату и время" value=<%@date_time%>>
   </div>
 
   <div class="form-group">
@@ -49,6 +49,7 @@
 <script type="text/javascript">
   $(function() {
   $('#color').simplecolorpicker();
+  $('#datetimepicker').datetimepicker();
   });
 </script>
 
