--- a/views/showusers.erb
+++ b/views/showusers.erb
@@ -1,1 +1,15 @@
-<%= @users %>
+<table class="table">
+	
+	<% @results.each do |row| %>
+	
+	<tr>
+		<td><%= row['ID'] %></td>
+		<td><%= row['Name'] %></td>
+		<td><%= row['Phone'] %></td>
+		<td><%= row['DateStamp'] %></td>
+		<td><%= row['Barber'] %></td>
+		<td><%= row['Color'] %></td>
+	</tr>
+	
+	<% end %>
+</table>
