--- a/views/visit.erb
+++ b/views/visit.erb
@@ -20,9 +20,16 @@
   <div class="form-group">
     <label>Выберите парикмахера</label>
     <select name="barber">
-      <option <%= @barber == 'Walter White'? 'selected' : '' %>>Walter White</option>
+<!-- 
+     <option <%= @barber == 'Walter White'? 'selected' : '' %>>Walter White</option>
       <option <%= @barber == 'Jessie Pinkman'? 'selected' : '' %>>Jessie Pinkman</option>
-      <option <%= @barber == 'Gus Fring'? 'selected' : '' %>>Gus Fring</option>
+      <option <%= @barber == 'Gus Fring'? 'selected' : '' %>>Gus Fring</option> %>
+      -->
+    
+      <% @barbers.each do |item|%>
+        <option <%= @barber == item['Name']? 'selected' : '' %>><%= item['Name'] %></option>
+        <% end %>
+    
     </select>
   </div>
  
